fix css color too light

--- a/assets/comments.scss
+++ b/assets/comments.scss
@@ -29,7 +29,7 @@
     }
 
     &:nth-child(10n+7) .author-img {
-        background: lighten(pink, 20%);
+        background: lighten(pink, 5%);
     }
 
     &:nth-child(10n+8) .author-img {
